2006-02-28  Devashish Sharma  <sdevashish@novell.com>

	* e-reflow.c :(do_adjustment): Check and see if reflow->items 
	and reflow->items[row] are NULL or not.
	Fixes Bug # 331998.
	Patch submitted by Irene Huang <Irene.Huang@sun.com>

2006-02-24  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #322789
	
	* e-image-chooser.c: (set_image_from_data): Added code to get the
	pixbuf after closing the loaded.

2006-02-13  Andre Klapper  <a9016009@gmx.de>

	* e-charset-picker.c: adding thai support.
	fixes the UI part of bug 251062.

2006-02-11  Karsten Bräckelmann  <guenther@rudersport.de>

	* e-search-bar.c (activate_by_subitems): 
	* e-dateedit.c (e_date_edit_new, create_children) 
	(create_children, create_children): 
	* e-calendar.c (e_calendar_init): 
	Change a11y names. Fixes part of bug #330723.

2006-01-16  Nancy Cai <nancy.cai@sun.com>

	** Fixes bug #326649
	
	* e-multi-config-dialog.c: (set_page_timeout_callback):
	make the preferences dialog's keyboard navigation more consistent.	

2006-01-13  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #326265

	* e-charset-picker.c: (e_charset_picker_bonobo_ui_populate):
	Added mnemonics to "Character Encoding" menu.

2006-01-11  Chenthill Palanisamy  <pchenthill@novell.com>

	* Makefile.am: Remove the e-util-marshal.list from extra dist.
	Fixes a build break.

2006-01-10  Simon Zheng  <simon.zheng@sun.com>

	* Makefile.am:
	* e-dateedit.c:
	* e-image-chooser.c:
	* e-printable.c:
	* e-reflow-model.c:
	* e-reflow.c:
	* e-search-bar.c:
	* e-selection-model.c:
	* gal-combo-box.c:
	Remove e-util-marshal.list in current directory, and
	use the copy in evolution/e-util directory instead.

	*e-util-marshal.list: removed

2006-01-06  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* e-search-bar.c:(clear_verb_cb): assign the data first
	before accessing it.

2006-01-02  Harish Krishnaswamy  <kharish@novell.com>

	reviewed by: Srinivasa Ragavan <sragavan@novell.com>
